public class Biometria {
}
