public class Cerradura {
}
