public class Credencial {
}
