public class ModuloComunicaciones {
}
