public class ModuloElectronico {
}
