public class ModuloMecanico {
}
