public class PlataformaSeguridad {
}
