public class TarjetaRFID {
}
