public class Usuario {

    private String nombre;
    private String ID;
    private Credencial credencial;

    public Usuario(String nombre, String ID, Credencial credencial) {
        this.nombre = nombre;
        this.ID = ID;
        this.credencial = credencial;
    }

    public void solicitarAcceso(){

    }
}
